force-app/main/default/objects/COMM_OMS_CalloutSettings__mdt/COMM_OMS_CalloutSettings__mdt.object-meta.xml
<CustomObject>
    <description>Callout Settinsg holds the configurations for callouts</description>
    <label>OMS Callout Setting</label>
    <pluralLabel>OMS Callout Settings</pluralLabel>
</CustomObject>