force-app/main/default/objects/COMM_OMS_CalloutSettings__mdt/fields/Endpoint_Server__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Server__c</fullName>
    <description>This specifies the endpoint server for the integration - e.g. https://&lt;&lt;env&gt;&gt;.services.com/</description>
    <label>Endpoint Server</label>
    <length>255</length>
    <type>Text</type>
</CustomField>