force-app/main/default/objects/COMM_OMS_CalloutSettings__mdt/fields/Endpoint_URI__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_URI__c</fullName>
    <description>This species the URI for the integration service - e.g. territory_assignments/accounts/</description>
    <label>Endpoint URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>