force-app/main/default/objects/COMM_OMS_CalloutSettings__mdt/fields/HTTP_Headers__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Headers__c</fullName>
    <description>Contains the map of the HTPP Headers (HeaderKey=&gt;HeaderValue) separated by semicolons following: 
HeaderKey=&gt;HeaderValue;HeaderKey=&gt;HeaderValue</description>
    <inlineHelpText>Contains the map of the HTPP Headers (HeaderKey=&gt;HeaderValue) separated by semicolons following: 
HeaderKey=&gt;HeaderValue;HeaderKey=&gt;HeaderValue</inlineHelpText>
    <label>HTTP Headers</label>
    <type>TextArea</type>
</CustomField>