force-app/main/default/objects/COMM_OMS_CalloutSettings__mdt/fields/QueryString__c.field-meta.xml
<CustomField>
    <fullName>QueryString__c</fullName>
    <label>QueryString</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>