force-app/main/default/objects/COMM_OMS_CalloutSettings__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>HTTP_Method__c</columns>
    <columns>Endpoint_Server__c</columns>
    <columns>Endpoint_URI__c</columns>
    <columns>Timeout__c</columns>
    <columns>QueryString__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>